--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="icon" href="/favicon.ico" />
+  <meta http-equiv="X-UA-Compatible" content="IE=7">
+  <meta name="description"
+    content="A schoolproject with the goal of cloning Tesla.com webpage before they added videos as backgrounds using React and Vite">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TeslaClone project</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
